--- a/resources/admin.fxml
+++ b/resources/admin.fxml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
 <VBox spacing="10" alignment="CENTER" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.AdminController">
-    <Label text="管理员面板 - 用户管理"/>
+    <!-- Global padding for the layout -->
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
+    <Label text="Admin Panel - User Management" style="-fx-font-size: 20px;"/>
     <ListView fx:id="userListView" prefHeight="200" prefWidth="200"/>
-    <TextField fx:id="newUserField" promptText="新用户名"/>
+    <TextField fx:id="newUserField" promptText="New Username">
+        <VBox.margin>
+            <Insets top="10" right="10" bottom="10" left="10"/>
+        </VBox.margin>
+    </TextField>
     <HBox spacing="10" alignment="CENTER">
-        <Button text="创建用户" onAction="#handleCreateUser"/>
-        <Button text="删除用户" onAction="#handleDeleteUser"/>
+        <Button text="Create User" onAction="#handleCreateUser"/>
+        <Button text="Delete User" onAction="#handleDeleteUser"/>
+        <Button text="Logout" onAction="#handleLogout"/>
     </HBox>
 </VBox>
