--- a/resources/album.fxml
+++ b/resources/album.fxml
@@ -2,20 +2,28 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.AlbumController">
+    <!-- Global padding for the layout -->
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
     <center>
         <ListView fx:id="photoListView"/>
     </center>
     <bottom>
         <HBox spacing="10" alignment="CENTER">
-            <Button text="添加照片" onAction="#handleAddPhoto"/>
-            <Button text="删除照片" onAction="#handleDeletePhoto"/>
-            <Button text="返回" onAction="#handleBack"/>
+            <Button text="Add Photo" onAction="#handleAddPhoto"/>
+            <Button text="Delete Photo" onAction="#handleDeletePhoto"/>
+            <Button text="Back" onAction="#handleBack"/>
         </HBox>
     </bottom>
     <right>
-        <Label fx:id="photoDetailsLabel" text="照片详情" wrapText="true"/>
+        <VBox spacing="10" style="-fx-padding: 0 5 0 5;">
+            <Label wrapText="true" fx:id="photoDetailsLabel" text="Photo Details" maxWidth="200"/>
+        </VBox>
     </right>
 </BorderPane>
