--- a/resources/login.fxml
+++ b/resources/login.fxml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.VBox?>
 <VBox spacing="10" alignment="CENTER" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.LoginController">
-    <Label text="登录"/>
-    <TextField fx:id="usernameField" promptText="请输入用户名"/>
-    <Button text="登录" onAction="#handleLogin"/>
+    <!-- Global padding for the entire layout -->
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
+    <Label text="Login" style="-fx-font-size: 20px;"/>
+    <TextField fx:id="usernameField" promptText="Enter your username">
+        <VBox.margin>
+            <Insets top="10" right="10" bottom="10" left="10"/>
+        </VBox.margin>
+    </TextField>
+    <Button text="Login" onAction="#handleLogin">
+        <VBox.margin>
+            <Insets top="10" right="10" bottom="10" left="10"/>
+        </VBox.margin>
+    </Button>
 </VBox>
+
