--- a/resources/login.fxml
+++ b/resources/login.fxml
@@ -13,7 +13,7 @@
             <Insets top="10" right="10" bottom="10" left="10"/>
         </VBox.margin>
     </TextField>
-    <Button text="Login" onAction="#handleLogin">
+    <Button text="Login" onAction="#handleLogin" defaultButton="true">
         <VBox.margin>
             <Insets top="10" right="10" bottom="10" left="10"/>
         </VBox.margin>
