--- a/resources/album.fxml
+++ b/resources/album.fxml
@@ -16,6 +16,7 @@
     </center>
     <bottom>
         <HBox spacing="10" alignment="CENTER">
+            <Button text="Open Photo" onAction="#handleOpenPhoto"/>
             <Button text="Add Photo" onAction="#handleAddPhoto"/>
             <Button text="Delete Photo" onAction="#handleDeletePhoto"/>
             <Button text="Rename" onAction="#handleRename"/>
